--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
   "dependencies": {
     "animejs": "^3.1.0",
     "compass-vertical-rhythm": "^1.4.5",
-    "gatsby": "^2.13.73",
-    "gatsby-image": "^2.2.10",
-    "gatsby-plugin-feed": "^2.3.7",
-    "gatsby-plugin-google-analytics": "^2.1.8",
-    "gatsby-plugin-manifest": "^2.2.6",
+    "gatsby": "^2.15.15",
+    "gatsby-image": "^2.2.19",
+    "gatsby-plugin-feed": "^2.3.12",
+    "gatsby-plugin-google-analytics": "^2.1.16",
+    "gatsby-plugin-manifest": "^2.2.16",
     "gatsby-plugin-offline": "^2.2.7",
-    "gatsby-plugin-react-helmet": "^3.1.4",
-    "gatsby-plugin-sharp": "^2.2.13",
-    "gatsby-plugin-typography": "^2.3.3",
-    "gatsby-remark-copy-linked-files": "^2.1.7",
-    "gatsby-remark-images": "^3.1.13",
-    "gatsby-remark-prismjs": "^3.3.6",
-    "gatsby-remark-responsive-iframe": "^2.2.5",
-    "gatsby-remark-smartypants": "^2.1.3",
-    "gatsby-source-filesystem": "^2.1.11",
-    "gatsby-transformer-remark": "^2.6.15",
-    "gatsby-transformer-sharp": "^2.2.7",
+    "gatsby-plugin-react-helmet": "^3.1.7",
+    "gatsby-plugin-sass": "^2.1.13",
+    "gatsby-plugin-sharp": "^2.2.22",
+    "gatsby-plugin-typography": "^2.3.7",
+    "gatsby-remark-copy-linked-files": "^2.1.19",
+    "gatsby-remark-images": "^3.1.22",
+    "gatsby-remark-prismjs": "^3.3.13",
+    "gatsby-remark-responsive-iframe": "^2.2.16",
+    "gatsby-remark-smartypants": "^2.1.8",
+    "gatsby-source-filesystem": "^2.1.22",
+    "gatsby-transformer-remark": "^2.6.22",
+    "gatsby-transformer-sharp": "^2.2.14",
     "gray-percentage": "^2.0.0",
+    "node-sass": "^4.12.0",
     "prismjs": "^1.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
