--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "animejs": "^3.1.0",
+    "bulma": "^0.7.5",
     "compass-vertical-rhythm": "^1.4.5",
     "gatsby": "^2.15.15",
     "gatsby-image": "^2.2.19",
@@ -34,14 +35,10 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typeface-playfair-display": "0.0.72",
-    "typeface-raleway": "0.0.75",
-    "typography": "^0.16.19",
-    "typography-breakpoint-constants": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "typeface-raleway": "0.0.75"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
